# ShioSakura-Package-Manager-SSPM-

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  main.cpp
cli/: cli_router.h
core/: detect.cpp  detect.h  exec_engine.cpp  exec_engine.h  logger.h  resolver.h
db/: skydb.cpp
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  BACKENDS.md  CLI.md  MIGRATION_PLAN.md  MODULE_DEVELOPMENT.md  MODULE_STRUCTURE.md  OPTIMIZATION_REPORT.md  PROBLEMS_AND_DIAGNOSTICS.md  RESOLVER.md  SPK_FORMAT.md
docs/readme/: README.ar.md  README.de.md  README.en.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.ko.md  README.ru.md  README.vi.md  README.zh_CN.md  README.zh_TW.md
doctor/: doctor.cpp  doctor.h
i18n/: en.json  i18n.h
include/sspm/: api.h  backend.h  backend_registry.h  cache.h  cli.h  database.h  dep_resolver.h  exec.h  index.h  log.h  mirror.h  module.h  module_test.h  network.h  plugin.h  profile.h  repo.h  resolver.h  security.h  spk.h  sspm-sdk.h  transaction.h  validator.h
include/sspm/backends/: apk_backend.h
layer/backends/: amber_backend.cpp  amber_backend.h  apt_backend.cpp  apt_backend.h  aur_backend.cpp  aur_backend.h  brew_backend.cpp  cargo_backend.h  flatpak_backend.h  gem_backend.cpp  macports_backend.cpp  npm_backend.h  pacman_backend.cpp  ports_backend.cpp  ports_backend.h  snap_backend.h  wine_backend.cpp  zypper_backend.h
old/sky-rebuild/cli/: cli_router.cpp
old/sky-rebuild/core/: backend_setup.cpp  backend_setup.h  mirror.cpp  mirror.h  resolver.cpp
old/sky-rebuild/db/: skydb.h
old/sky-rebuild/desktop/: desktop_integration.cpp  desktop_integration.h
old/sky-rebuild/i18n/: i18n.cpp
old/sky-rebuild/layer/: backend.h  layer_manager.cpp  layer_manager.h
old/sky-rebuild/layer/backends/: brew_backend.h  cargo_backend.cpp  dnf_backend.cpp  dnf_backend.h  dpkg_backend.cpp  dpkg_backend.h  flatpak_backend.cpp  gem_backend.h  macports_backend.h  nix_backend.cpp  nix_backend.h  npm_backend.cpp  pacman_backend.h  pip_backend.cpp  pip_backend.h  pkg_backend.cpp  pkg_backend.h  portable_backend.cpp  portable_backend.h  portage_backend.cpp  portage_backend.h  snap_backend.cpp  spk_backend.cpp  spk_backend.h  wine_backend.h  zypper_backend.cpp
old/sky-rebuild/plugin/: plugin_api.h  plugin_loader.cpp
old/sky-rebuild/transaction/: transaction.h
plugin/: plugin_loader.h
plugins/example-aur/: aur_backend.cpp  plugin.toml
profile/: profile.cpp  profile.h
src/api/: api.cpp
src/backend_registry/: backend_registry.cpp
src/backends/amber/: amber_backend.cpp  amber_backend.h
src/backends/apk/: apk_backend.cpp
src/backends/appimage/: appimage_backend.cpp
src/backends/apt/: apt_backend.cpp
src/backends/aur/: aur_backend.cpp  aur_backend.h
src/backends/brew/: brew_backend.cpp
src/backends/cargo/: cargo_backend.cpp  cargo_backend.h
src/backends/chocolatey/: chocolatey_backend.cpp
src/backends/dnf/: dnf_backend.cpp
src/backends/dpkg/: dpkg_backend.cpp  dpkg_backend.h
src/backends/flatpak/: flatpak_backend.cpp
src/backends/gem/: gem_backend.cpp  gem_backend.h
src/backends/macports/: macports_backend.cpp
src/backends/nix/: nix_backend.cpp
src/backends/npm/: npm_backend.cpp  npm_backend.h
src/backends/pacman/: pacman_backend.cpp
src/backends/pip/: pip_backend.cpp  pip_backend.h
src/backends/pkg/: pkg_backend.cpp
src/backends/pkgin/: pkgin_backend.cpp
src/backends/portage/: portage_backend.cpp
src/backends/ports/: ports_backend.cpp  ports_backend.h
src/backends/run/: run_backend.cpp
src/backends/scoop/: scoop_backend.cpp
src/backends/snap/: snap_backend.cpp
src/backends/spk/: spk_backend.cpp
src/backends/wine/: wine_backend.cpp  wine_backend.h
src/backends/winget/: winget_backend.cpp
src/backends/xbps/: xbps_backend.cpp
src/backends/zypper/: zypper_backend.cpp
src/cache/: cache.cpp
src/cli/: commands.cpp  install.cpp  main.cpp  remove.cpp  search.cpp  update.cpp
src/core/: config_manager.cpp  exec.cpp  validator.cpp
src/daemon/: CMakeLists.txt  daemon_main.cpp
src/database/: database.cpp
src/desktop/: desktop_integration.cpp  desktop_integration.h
src/doctor/: doctor.cpp
src/i18n/: i18n.cpp  i18n.h  zh_CN.json
src/index/: index.cpp
src/log/: log.cpp
src/mirror/: mirror.cpp
src/network/: network.cpp
src/plugin/: plugin.cpp
src/profile/: profile.cpp
src/repo/: repo.cpp
src/resolver/: conflict_solver.cpp  dep_graph.cpp  dep_resolver.cpp  resolver.cpp  version_solver.cpp
src/security/: security.cpp
src/spk/: spk.cpp
src/transaction/: transaction.cpp
tests/: CMakeLists.txt  test_apk_backend.cpp  test_cache.cpp  test_database.cpp  test_index.cpp  test_resolver.cpp  test_security.cpp  test_transaction.cpp
tests/benchmarks/: benchmark_index.cpp
transaction/: transaction.cpp
